Add phabricator domain to trust list for now

--- a/.arcconfig
+++ b/.arcconfig
@@ -3,6 +3,9 @@
     "unit.engine": "Firehed\\Arctools\\PHPUnitTestEngine",
     "unit.phpunit.binary": "vendor/bin/phpunit",
     "phpunit.config": "phpunit.xml.dist",
+    "https.blindly-trust-domains": [
+        "phabricator.ericstern.com"
+    ],
     "load": [
         "vendor/firehed/arctools"
     ]
