--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,6 @@
 <phpunit
 	bootstrap="vendor/firehed/arctools/tests/bootstrap.php"
+    forceCoversAnnotation="true"
 	>
 	<testsuites>
 		<testsuite name="input">
