Add ValidationInterface test trait

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Firehed\\Input\\": "src/"
+            "Firehed\\Input\\": ["src/", "tests/"]
         }
     },
     "require": {
@@ -18,8 +18,5 @@
     "require-dev": {
         "firehed/arctools": "*@dev",
         "phpunit/phpunit": "~4.3"
-    },
-    "suggest": {
-        "firehed/inputobjects": "A collection of common InputObjects covering typical use cases"
     }
 }
