--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ versions:
     - 7.0
     - 7.1
     - 7.2
+install:
+    - composer install --no-interaction --no-progress --no-suggest --prefer-dist
