--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "firehed/arctools": "*@dev",
+        "php-coveralls/php-coveralls": "^2.0",
         "phpunit/phpunit": "^6.0 | ^7.0"
     }
 }
