--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ php:
   - '7.2'
 install:
   - composer install --no-interaction --no-progress --no-suggest --prefer-dist
+script: vendor/bin/phpunit --coverage-text --whitelist src/ tests/
+after_success:
+  - travis_retry vendor/bin/php-coveralls
