--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,11 @@
         "firehed/arctools": "*@dev",
         "php-coveralls/php-coveralls": "^2.0",
         "phpunit/phpunit": "^7.0"
+    },
+    "scripts": {
+        "test": [
+            "@phpunit"
+        ],
+        "phpunit": "phpunit --coverage-text"
     }
 }
