--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,11 @@
         }
     },
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.0"
     },
     "require-dev": {
-        "firehed/arctools": "*@dev",
         "php-coveralls/php-coveralls": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^6 || ^7"
     },
     "scripts": {
         "test": [
