--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.11.0",
-        "phpstan/phpstan-phpunit": "^0.11.0",
+        "phpstan/phpstan": "^0.9 || ^0.10 || ^0.11",
+        "phpstan/phpstan-phpunit": "^0.9 || ^0.10 || ^0.11",
         "phpunit/phpunit": "^6 || ^7"
     },
     "scripts": {
