--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: php
 php:
-  - '7.0'
   - '7.1'
   - '7.2'
+  - '7.3'
 install:
   - composer install --no-interaction --no-progress --no-suggest --prefer-dist
-script: vendor/bin/phpunit --coverage-text --whitelist src/ tests/
+script:
+  - vendor/bin/phpunit --coverage-text --whitelist src/ tests/
+  - composer phpstan
 after_success:
   - travis_retry vendor/bin/php-coveralls
