--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,24 @@
             "Firehed\\Input\\": ["src/", "tests/"]
         }
     },
+    "config": {
+        "sort-packages": true
+    },
     "require": {
         "php": ">=7.0"
     },
     "require-dev": {
         "php-coveralls/php-coveralls": "^2.0",
-        "phpunit/phpunit": "^6 || ^7"
+        "phpstan/phpstan": "^0.11",
+        "phpstan/phpstan-phpunit": "^0.11",
+        "phpunit/phpunit": "^7"
     },
     "scripts": {
         "test": [
-            "@phpunit"
+            "@phpunit",
+            "@phpstan"
         ],
+        "phpstan": "phpstan analyse --no-progress .",
         "phpunit": "phpunit --coverage-text"
     }
 }
