--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
       # TODO: build cache
 
       - name: Install dependencies
-        run: composer install --no-interaction --no-ansi --no-progress --no-suggest --prefer-dist --optimize-autoloader
+        run: composer install --no-interaction --no-ansi --no-progress --no-suggest --prefer-dist --optimize-autoloader --ignore-platform-reqs
         # todo: prefer-lowest
 
       - name: PHPUnit
@@ -72,7 +72,7 @@ jobs:
       # TODO: build cache
 
       - name: Install dependencies
-        run: composer install --no-interaction --no-ansi --no-progress --no-suggest --prefer-dist --optimize-autoloader
+        run: composer install --no-interaction --no-ansi --no-progress --no-suggest --prefer-dist --optimize-autoloader --ignore-platform-reqs
         # todo: prefer-lowest
 
       - name: PHPStan
