--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.0"
+        "php": "^7.0 || ^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.11",
