--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,5 +2,8 @@ includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
 parameters:
     excludes_analyse:
-        - %rootDir%/../../../vendor
-    level: 7
+        - vendor
+    level: max
+    paths:
+        - src
+        - tests
