--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require-dev": {
         "phpstan/phpstan": "^0.12.32",
         "phpstan/phpstan-phpunit": "^0.12",
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^7 || ^8 || ^9"
     },
     "scripts": {
         "test": [
