--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.0 || ^8.0"
+        "php": "^7.0 || ^8.0",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.32",
