--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.0 || ^8.0",
-        "squizlabs/php_codesniffer": "^3.6"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.32",
         "phpstan/phpstan-phpunit": "^0.12",
-        "phpunit/phpunit": "^8.3 || ^9"
+        "phpunit/phpunit": "^8.3 || ^9",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "scripts": {
         "test": [
