--- a/composer.json
+++ b/composer.json
@@ -10,26 +10,36 @@
     ],
     "autoload": {
         "psr-4": {
-            "Firehed\\Input\\": ["src/", "tests/"]
+            "Firehed\\Input\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Firehed\\Input\\": "tests"
         }
     },
     "config": {
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.0"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11",
-        "phpstan/phpstan-phpunit": "^0.11",
-        "phpunit/phpunit": "^7"
+        "phpstan/phpstan": "^0.12.32",
+        "phpstan/phpstan-phpunit": "^0.12",
+        "phpunit/phpunit": "^8.3 || ^9",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "scripts": {
         "test": [
             "@phpunit",
-            "@phpstan"
+            "@phpstan",
+            "@phpcs"
         ],
-        "phpstan": "phpstan analyse --no-progress .",
-        "phpunit": "phpunit --coverage-text"
+        "autofix": "phpcbf",
+        "phpunit": "phpunit",
+        "phpstan": "phpstan analyse",
+        "phpstan-baseline": "phpstan analyse --generate-baseline",
+        "phpcs": "phpcs"
     }
 }
