--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.2 || ^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.32",
