--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,11 @@
 /tests export-ignore
 /.editorconfig export-ignore
 /.gitattributes export-ignore
+/.github export-ignore
 /.gitignore export-ignore
+/phpcs.xml export-ignore
+/phpstan-baseline.neon export-ignore
+/phpstan.neon export-ignore
+/phpunit.xml export-ignore
 
 *.php diff=php
