--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,11 @@ jobs:
           - '7.4'
           - '8.0'
           - '8.1'
+        exclude:
+            # PHPUnit prefer-lowest on 8.1 fails because the 8.x line doesn't
+            # specifiy compatibility correctly. Doubt that'll get fixed.
+            - php: '8.1'
+              dependencies: low
 
     steps:
       - name: Check out code
