--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^8.0"
+        "php": "^8.1"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.32",
-        "phpstan/phpstan-phpunit": "^0.12",
-        "phpunit/phpunit": "^8.3 || ^9",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpunit/phpunit": "^10",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "scripts": {
