--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "php": "^7.2 || ^8.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.32",
-        "phpstan/phpstan-phpunit": "^0.12",
-        "phpunit/phpunit": "^8.3 || ^9",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpunit/phpunit": "^8.3 || ^9.0 || ^10.0",
         "squizlabs/php_codesniffer": "^3.6"
     },
     "scripts": {
