--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,8 @@ jobs:
             # specifiy compatibility correctly. Doubt that'll get fixed.
             - php: '8.1'
               dependencies: low
+            - php: '8.2'
+              dependencies: low
 
     steps:
       - name: Check out code
