--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,13 @@ jobs:
           - '7.4'
           - '8.0'
           - '8.1'
+          - '8.2'
         exclude:
             # PHPUnit prefer-lowest on 8.1 fails because the 8.x line doesn't
             # specifiy compatibility correctly. Doubt that'll get fixed.
             - php: '8.1'
+              dependencies: low
+            - php: '8.2'
               dependencies: low
 
     steps:
