--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.2 || ^8.0"
+        "php": "^7.2 || ^8.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10",
